# unitree_h1_teleoperation_ws

./: .gitignore  README.md  install_dependensies.bash  install_python3_dependensies.bash  log.txt  save.bash
completed_scripts_teleoperation/: package.xml  setup.cfg  setup.py
completed_scripts_teleoperation/completed_scripts_teleoperation/launch/: teleoperation_launch.py  teleoperation_with_metrics_launch.py
completed_scripts_teleoperation/launch/: teleoperation.launch.py  teleoperation_launch.py  teleoperation_with_metrics_launch.py
converter_angles_fedor_into_rad_package/: package.xml  setup.cfg  setup.py
converter_angles_fedor_into_rad_package/converter_angles_fedor_into_rad_package/: converter_angles_fedor_into_rad_node.py
converter_angles_fedor_into_rad_package/converter_angles_ukt_into_rad_package/: converter_angles_ukt_into_rad_node.py
converter_angles_ukt_into_rad_package/: package.xml  setup.py
converter_angles_ukt_into_rad_package/converter_angles_ukt_into_rad_package/: converter_angles_ukt_into_rad_node.py
converter_from_fedor_to_h1_package/: package.xml  setup.cfg  setup.py
converter_from_fedor_to_h1_package/converter_from_fedor_to_h1_package/: converter_from_fedor_to_h1_node.py
converter_from_ukt_to_h1_package/: package.xml  setup.cfg  setup.py
converter_from_ukt_to_h1_package/converter_from_ukt_to_h1_package/: converter_from_ukt_to_h1_node.py
debug_srcipits/: finaly_converter.py
extractor_package/: package.xml  setup.cfg  setup.py
extractor_package/extractor_package/: extractor_node.py
log/: latest_list
radon_reports/: cc_report.txt  halstead_report.txt  mi_report.txt  raw_report.txt  total_report.txt
repeater_package/: package.xml  setup.cfg  setup.py
repeater_package/repeater_package/: repeater_node.py
udp_listener_and_converter/: package.xml  setup.cfg  setup.py
udp_listener_and_converter/udp_listener_and_converter/: udp_listener_and_converter_with_hands.py  udp_listener_and_converter_without_hands.py
ukt_library/: package.xml  setup.cfg  setup.py
ukt_library/ukt_library/: __init__.py  limits.py  mapping.py  normalize_values.py  utils.py
