<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>converter_from_fedor_to_h1_package</name>
  <version>1.0.0</version>
  <description>This ROS2 node converts joint position data from Fedor format to
              Unitree H1 format by subscribing to the Fedor_bare_data topic, 
              transforming angles with respect to each joint's constraints, and 
              publishing the result to positions_to_unitree at 333.3 Hz, 
              including a smooth falloff on shutdown. The code includes dictionaries
              for mapping joints to their ranges, as well as error handling and 
              logging via ROS2.</description>
  <maintainer email="sashagrachev2005@gmail.com">banana-killer</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
