<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>extractor_package</name>
  <version>1.0.0</version>
  <description>ROS2 node for monitoring and comparing joint angles between 
              Fedor device and Unitree H1 robot. Subscribes to Fedor data 
              (JSON) and H1 motor states, publishes selected joint values for 
              PlotJuggler visualization. Supports joint selection via 
              H1_joint_num parameter.</description>
  <maintainer email="sashagrachev@gmail.com">banana-killer</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>unitree_go</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
