<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>udp_listener_and_converter</name>
  <version>1.0.0</version>
  <description>The package includes a script that allows you to listen 
              to a udp socket, convert coordinates from the Fedor robot
               to Unitree_H1</description>
  <maintainer email="sashagrachev2005@gmail.com">banana-killer</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
